[package]
name = "example-hello-plain-world"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = { path = "../../axum" }
tokio = { version = "1.0", features = ["full"] }

[dev-dependencies]
headers = "0.4.0"
http-body-util = "0.1.0"
tower = { version = "0.5.2", features = ["util"] }
